# gfxplay

./: CMakeLists.txt  Gfxplay_GetDependencies.cmake  README.md
resources/: attribute_color_shader.frag  attribute_color_shader.vert  blinn_phong.frag  blinn_phong.vert  bloom.frag  bloom.vert  bloom_final.frag  blur.frag  bumpmap_shader.frag  bumpmap_shader.vert  color_selection.frag  deferred1.frag  deferred1.vert  deferred2.frag  deferred2.vert  deferred3.frag  deferred3.vert  hdr.frag  instanced_model_loading.vert  lightbox.frag  logl_12.frag  logl_blending.frag  logl_framebuffers.frag  logl_geom_normals.geom  model_loading.frag  model_loading.vert  multilight.frag  multilight.vert  parallax_shader.frag  parallax_shader.vert  plain_texture_shader.frag  plain_texture_shader.vert  point_shadows.frag  point_shadows.vert  point_shadows_depthmap.frag  point_shadows_depthmap.geom  selectable.frag  shadows_shadow-maps.frag  shadows_shadow-maps.vert  shadows_shadow-maps_basic-tex.frag  (+7 more)
src/: ak_common-shaders.hpp  ak_fps.cpp  ak_random-experiment.cpp  ak_random-experiment2.cpp  ak_selectable-geom.cpp  app.cpp  app.hpp  cairo.hpp  clock.cpp  entt_attempt.cpp  gfxplay.cpp  gfxplay_config.hpp.in  gl.cpp  gl.hpp  gl_extensions.cpp  gl_extensions.hpp  glglm.hpp  imgui_demo.cpp  imgui_extensions.cpp  imgui_extensions.hpp  learnimgui.cpp  logl_10_lighting-maps.cpp  logl_11_light-casters.cpp  logl_12-multiple-lights.cpp  logl_12_multiple-lights.cpp  logl_13_model-loading.cpp  logl_1_hellotriangle.cpp  logl_2_shaders.cpp  logl_3_textures.cpp  logl_4_transformations.cpp  logl_5_coordinate-systems.cpp  logl_6_camera.cpp  logl_7_colors.cpp  logl_8_basic-lighting.cpp  logl_9_materials.cpp  logl_advanced-lighting.cpp  logl_anti-aliasing-a-framebuffer.cpp  logl_blending.cpp  logl_bloom.cpp  logl_common.hpp  (+27 more)
